# NESEmu

./: .gitignore  Bus.cpp  Bus.hpp  CMakeLists.txt  CPU.cpp  CPU.hpp  Cartridge.cpp  Cartridge.hpp  Constants.cpp  Constants.hpp  NES.cpp  NES.hpp  README.md  SystemBus.cpp  SystemBus.hpp  global_vars.hpp  main.cpp  test.cpp
ROMs/: ADC_IMM.nes  ADC_IMM.s  AND_ABS.nes  AND_ABS.s  AND_ABS_X_no_page_cross.nes  AND_ABS_X_no_page_cross.s  AND_ABS_X_page_cross.nes  AND_ABS_X_page_cross.s  AND_IMM_negative_nonzero.nes  AND_IMM_negative_nonzero.s  AND_IMM_zero.nes  AND_IMM_zero.s  AND_IND_X.nes  AND_IND_X.s  AND_ZP.nes  AND_ZP.s  AND_ZP_X.nes  AND_ZP_X.s  ASL_Accum.nes  ASL_Accum.s  ASL_ZP.nes  ASL_ZP.s  ASL_ZPX.nes  ASL_ZPX.s  BCC_backwards.nes  BCC_backwards.s  BCC_branch_not_taken.nes  BCC_branch_not_taken.s  BCC_branch_taken_no_page_cross.nes  BCC_branch_taken_no_page_cross.s  BCC_branch_taken_page_cross.nes  BCC_branch_taken_page_cross.s  CMP_IMM.nes  CMP_IMM.s  INC_ABSX.nes  INC_ABSX.s  INX_INY.nes  INX_INY.s  LSR_Accum.nes  LSR_Accum.s  (+64 more)
